--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-/node_modules
-/dist
-/.cache
-/package-lock.json
-/src/manifest.json
+node_modules/
+dist/
+.cache/
+package-lock.json
+src/manifest.json
